# opp_labs

./: .gitignore
lab1_1/: CMakeLists.txt  main.cpp
lab1_2/: CMakeLists.txt  main.cpp
lab2_1/: CMakeLists.txt  main.cpp  program
lab2_2/: main.cpp  program
lab3/: main.cpp  mm2d
